--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,19 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "node_modules/ngx-extended-pdf-viewer/assets",
+                "output": "/assets/"
+              },
+              {
+                "glob": "**/*.md",
+                "input": "src/app/",
+                "output": "/assets"
+              }],
             "aot": true,
             "assets": [
               "src/favicon.ico",
