--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "port": 80,
             "browserTarget": "app-ais:build"
           },
           "configurations": {
